// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="form-group mt-3"
>
  <label
    class-name="mt-2"
    htmlFor="name"
  >
    Metric name
  </label>
  <div>
    <input
      className="form-control mb-3"
      id="name"
      name="name"
      onChange={[Function]}
      value=""
    />
  </div>
  <button
    className="mt-3 mr-3 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add unit
  </button>
  <button
    className="mt-3 btn btn-success d-block btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`renders correctly with data 1`] = `
<div
  className="form-group mt-3"
>
  <label
    class-name="mt-2"
    htmlFor="name"
  >
    Metric name
  </label>
  <div>
    <input
      className="form-control mb-3"
      id="name"
      name="name"
      onChange={[Function]}
      value="name1"
    />
  </div>
  <button
    className="mt-3 mr-3 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add unit
  </button>
  <button
    className="mt-3 btn btn-success d-block btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;
